Fix add folder team-members and Update link

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-<h1>My team:</h1>
-
-<ul>
-    </li><a href="team-members/kittinun.html">Kitti
-</ul>
-
+    <title>Team B-8 Lungs</title>
+</head>
+<body>
+    <h1>team-B-8_lungs</h1>
+    <ul>
+        <li><a href="team-members/kittinun.html">Kittinun Rattanasuphannawet</a></li>
+    </ul>
 </body>
 </html>
