--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <img class="avatar" src="team-members/images/phuttargue.jpg" alt="phuttargue soontorn">
         <div>
           <h3>Phuttargue Soontorn</h3>
-          <p>CarBomb Member</p>
+          <p>My child is Haru Urara</p>
         </div>
         <a href="team-members/phuttargue.html">Open</a>
       </article>
