--- a/team-members/phuttargue.html
+++ b/team-members/phuttargue.html
@@ -191,7 +191,7 @@
             <ul>
               <li>ชอบเล่นบาสเกตบอล และดูอนิเมะ</li>
               <li>เกมที่ชอบ: <b>Wuthering Waves</b>, <b>BlueArchive</b>, <b>Uma Musume Pretty Derby</b></li>
-              <li>ชอบดีไซน์นุ่ม ๆ โทนหวาน พาสเทล และ UI ที่ใช้แล้วแฮปปี้</li>
+              <li>ชอบสีชมพู ชอบของหวาน และชอบของที่ดูนุ่มนิ่ม</li>
             </ul>
             <div class="actions">
               <a class="btn" href="../index.html">ดูหน้า Team</a>
