--- a/team-members/phuttargue.html
+++ b/team-members/phuttargue.html
@@ -189,7 +189,7 @@
           <div class="section">
             <h3>เกี่ยวกับฉัน</h3>
             <ul>
-              <li>ชอบเล่นบาสเกตบอล และดูอนิเมะ</li>
+              <li>ชอบเล่นบาสเกตบอล ชอบอ่านมังงะ ชอบฟังเพลง และชอบดูอนิเมะ</li>
               <li>เกมที่ชอบ: <b>Wuthering Waves</b>, <b>BlueArchive</b>, <b>Uma Musume Pretty Derby</b></li>
               <li>ชอบสีชมพู ชอบของหวาน และชอบของที่ดูนุ่มนิ่ม</li>
             </ul>
