--- a/team-members/phuttargue.html
+++ b/team-members/phuttargue.html
@@ -183,7 +183,12 @@
           <div class="section">
             <h3>ติดต่อ</h3>
             <span class="pill">Email: <a href="mailto:notsoontorn5678@gmail.com">notsoontorn5678@gmail.com</a></span>
-            <span class="pill">Facebook: <a href="#">phuttargue soontorn</a></span>
+            <span class="pill">
+            <span class="pill">
+  Facebook: <a href="https://www.facebook.com/puttargur.soontorn" target="_blank"> 
+    phuttargue soontorn
+  </a>
+</span>
           </div>
 
           <div class="section">
