--- a/team-members/phuttargue.html
+++ b/team-members/phuttargue.html
@@ -9,6 +9,87 @@
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;800&family=Quicksand:wght@500;700&display=swap" rel="stylesheet">
 
   <style>
+    .name{ letter-spacing:.4px; }
+.subtitle{ color:#a2517f }
+
+/* ป้ายชิปให้ฟูและมีประกาย */
+.chip{
+  background: linear-gradient(180deg,#fff5fb,#ffe4f1);
+  border:1.5px solid #ffd3e7;
+  box-shadow: 0 6px 16px rgba(255,140,180,.16), inset 0 2px 0 #fff;
+}
+.chip:hover{ transform: translateY(-2px) scale(1.02); }
+
+/* ปุ่มให้เด้งแบบเยลลี่ */
+@keyframes jelly{
+  0%,100%{transform:scale(1)}
+  30%{transform:scale(1.08,.92)}
+  50%{transform:scale(.96,1.04)}
+  70%{transform:scale(1.02,.98)}
+}
+.btn{
+  border:1.5px solid #ffc9e0;
+  box-shadow: 0 12px 28px rgba(255,116,183,.28);
+}
+.btn:hover{ animation:jelly .5s both; }
+
+/* ปุ่มผีแบบน่ารัก */
+.btn--ghost{
+  background:linear-gradient(180deg,#fff,#fff6fa);
+  border:1.5px solid #ffd3e7;
+  color:#a03f78;
+}
+
+/* อวาตาร์แบบสติ๊กเกอร์ + เคลื่อนไหวเบาๆ */
+.avatar{
+  transition:.25s ease;
+  filter: drop-shadow(0 18px 32px rgba(224,70,146,.22));
+}
+.avatar-wrap:hover .avatar{
+  transform: translateY(-3px) rotate(-1.5deg);
+}
+
+/* กล่อง section ฟูขึ้น */
+.section{
+  background:linear-gradient(180deg,#fff9fc,#fff);
+  border:1.5px solid #ffd7ea;
+  box-shadow: 0 14px 28px rgba(255,170,200,.18);
+}
+
+/* หัวข้อ section ใส่ริบบิ้นเล็ก ๆ */
+.section h3{
+  position:relative;
+  padding-left:12px;
+}
+.section h3::before{
+  content:"🎀";
+  position:absolute; left:-2px; top:-2px;
+}
+
+/* รายการ bullet ให้เป็นซากุระ */
+.about ul{ list-style:none; padding-left:0; }
+.about li{ position:relative; padding-left:28px; }
+.about li::before{
+  content:"🌸"; position:absolute; left:0; top:2px;
+  filter: drop-shadow(0 2px 0 rgba(255,140,180,.25));
+}
+
+/* ป้ายเล็กใต้ชื่อ (badge) */
+.badge{
+  display:inline-block;
+  margin:6px 0 10px;
+  padding:6px 10px;
+  border-radius:999px;
+  font-weight:800; font-size:12.5px;
+  color:#8d2c68;
+  background:linear-gradient(180deg,#fff5fb,#ffe4f1);
+  border:1.2px solid #ffd3e7;
+  box-shadow:0 6px 12px rgba(255,120,170,.18);
+}
+
+/* pill ติดต่อ ใส่ไอคอนด้วย pseudo */
+.pill.email::before{ content:"📧 "; }
+.pill.fb::before{ content:"📘 "; }
     :root{
       /* พาเลตชมพูพาสเทล */
       --bg-1:#fff0f6;
@@ -172,7 +253,9 @@
 
         <div>
           <h1 class="name">Phuttargue Soontorn</h1>
+          <div class="badge">Haru Urara Fan ✨</div>
           <div class="subtitle">สมาชิกทีม B-8 Lungs</div>
+
 
           <div class="chips">
             <span class="chip">Hobby: เล่นบาส</span>
@@ -181,28 +264,31 @@
           </div>
 
           <div class="section">
-            <h3>ติดต่อ</h3>
-            <span class="pill">Email: <a href="mailto:notsoontorn5678@gmail.com">notsoontorn5678@gmail.com</a></span>
-            <span class="pill">
-            <span class="pill">
-  Facebook: <a href="https://www.facebook.com/puttargur.soontorn" target="_blank"> 
-    phuttargue soontorn
-  </a>
-</span>
-          </div>
+          <h3>ติดต่อ</h3>
+          <span class="pill email">
+    Email: <a href="mailto:notsoontorn5678@gmail.com">notsoontorn5678@gmail.com</a>
+  </span>
+  <span class="pill fb">
+    Facebook: <a href="https://www.facebook.com/phuttargue.soontorn" target="_blank" rel="noopener">phuttargue soontorn</a>
+  </span>
+</div>
 
-          <div class="section">
-            <h3>เกี่ยวกับฉัน</h3>
-            <ul>
-              <li>ชอบเล่นบาสเกตบอล ชอบอ่านมังงะ ชอบฟังเพลง และชอบดูอนิเมะ</li>
-              <li>เกมที่ชอบ: <b>Wuthering Waves</b>, <b>BlueArchive</b>, <b>Uma Musume Pretty Derby</b></li>
-              <li>ชอบสีชมพู ชอบของหวาน และชอบของที่ดูนุ่มนิ่ม</li>
-            </ul>
-            <div class="actions">
-              <a class="btn" href="../index.html">ดูหน้า Team</a>
-              <a class="btn btn--ghost" href="kittinun.html">ไปหน้า Kittinun</a>
-            </div>
-          </div>
+
+          <div class="section about">
+  <h3>เกี่ยวกับฉัน</h3>
+  <ul>
+    <li>ชอบเล่นบาสเกตบอล ชอบอ่านมังงะ ชอบฟังเพลง และชอบดูอนิเมะ</li>
+    <li>เกมที่ชอบ: <b>Wuthering Waves</b>, <b>BlueArchive</b>, <b>Uma Musume Pretty Derby</b></li>
+    <li>ชอบสีชมพู ชอบของหวาน และชอบของที่ดูนุ่มนิ่ม</li>
+  </ul>
+  <div class="actions">
+    <a class="btn" href="../index.html">ดูหน้า Team</a>
+    <a class="btn btn--ghost" href="kittinun.html">ไปหน้า Kittinun</a>
+    <!-- ปุ่มไปหาเพื่อนคนอื่น (ถ้ามีไฟล์) -->
+    <!-- <a class="btn btn--ghost" href="kitinan.html">ไปหน้า Kitinan</a> -->
+  </div>
+</div>
+
         </div>
       </div>
     </section>
@@ -224,7 +310,7 @@
       document.body.appendChild(sakura);
       setTimeout(()=>sakura.remove(),8000);
     }
-    setInterval(createSakura,300);
+    setInterval(createSakura,420);
   </script>
 </body>
 </html>
