--- a/team-members/phuttargue.html
+++ b/team-members/phuttargue.html
@@ -59,12 +59,17 @@
 /* หัวข้อ section ใส่ริบบิ้นเล็ก ๆ */
 .section h3{
   position:relative;
-  padding-left:12px;
+  padding-left:28px; /* ขยับข้อความออกไปหน่อย กันไม่ให้ทับ */
 }
+
 .section h3::before{
   content:"🎀";
-  position:absolute; left:-2px; top:-2px;
+  position:absolute;
+  left:0;   /* ไม่ทับข้อความแล้ว */
+  top:0;    /* วางตรงบรรทัด */
+  font-size:18px; /* เล็กลงน่ารักๆ */
 }
+
 
 /* รายการ bullet ให้เป็นซากุระ */
 .about ul{ list-style:none; padding-left:0; }
